--- a/index.html
+++ b/index.html
@@ -1,1 +1,348 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Yu-Jer Lin</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/style.css" rel="stylesheet">
+
+    <link href="css/buttons.css" rel="stylesheet">
+
+
+    <!-- This is for the social buttons -->
+    <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+    <body data-spy="scroll" data-target="#scrollTarget">
+    <!-- Navigation -->
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Welcome To Yu-Jer's Page</a>
+                </div>
+                <div class="collapse navbar-collapse" id="scrollTarget">
+                    <ul class="nav navbar-nav pull-right">
+                        <li>
+                            <a href="#about">
+                            <i class="fa fa-user"></i>About Me
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#skills">
+                            <i class="fa fa-file-text"></i>Skills
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#projects">
+                            <i class="fa fa-rocket"></i>Projects
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#contact">
+                            <i class="fa fa-envelope"></i>Contact
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+    <!-- About -->
+        <section id="about">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h2 class="section-heading">ABOUT ME</h2>
+                    </div>
+                    <div class="col-md-12 text-center">
+                        <img src="img/me.png" alt="mypicture" class="img-circle">
+                        <ul class="list-inline social-buttons" >
+                            <li><a href="https://github.com/bon22801"><i class="fa fa-github"></i></a>
+                            </li>
+                            <li><a href="https://www.linkedin.com/pub/yujer-lin/a0/189/573"><i class="fa fa-linkedin"></i></a>
+                            </li>
+                            <li><a href="https://www.facebook.com/yujer.lin"><i class="fa fa-facebook"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row"> 
+                    <div class="introText col-md-8 col-md-offset-2 ">
+                        <p class="large"> Hello! My name is Yu-Jer Lin.</p>
+                        <p class="large">I'm a software engineer recently completed my computer science Bachelor degree from University of Massachusetts Boston.</p>
+                        <p class="large"> My main focus are web and mobile development. I really love experimenting with new web technologies and frameworks like AngularJS and jQuery. You can see most of my front-end projects under my <a href="#projects">projects section</a>. </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    <!-- Resume -->
+        <section id="skills">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h2 class="section-heading ">Skills</h2>
+                    </div>
+                </div>
+
+
+                <div class="row">  
+                    <div class="col-sm-6">
+                        <div class="row boxFeature">
+                            <div class="col-xs-12">
+                                <i class="fa fa-html5 iconBig"></i>
+                            </div>
+                            <div class="col-xs-12">
+                                <h3>Web</h3>
+                            <h4>Build dynamic website with HTML5, CSS3, jQuery,and Bootstrap.</h4>
+                            </div>
+                        </div>
+                    </div>
+
+ 
+                    <div class="col-sm-6">
+                        <div class="row boxFeature">
+                            <div class="col-xs-12">
+                                <i class="fa fa-android iconBig"></i>
+                            </div>
+                            <div class="col-xs-12">
+                                <h3>Android</h3>
+                            <h4>Develop Android app with android studio and Google appinventor</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class ="row">
+                    <div class="col-md-4 text-center">
+                        <h2> Languages </h2>
+                        <h3> Java </h3>
+                        <div class="progress">
+                          <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+                          </div>
+                        </div>
+                        <h3> Python </h3>
+                        <div class="progress">
+                          <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
+                          </div>
+                        </div>
+                        <h3> C </h3>
+                        <div class="progress">
+                          <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%;">
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <h2> Web Development </h2>
+                        <h3> CSS </h3>
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
+                          </div>
+                        </div>
+                        <h3> JavaScript </h3>
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                          </div>
+                        </div>
+                        <h3>  Ruby on Rails </h3>
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <h2>Libraries</h2>
+                        <h3> jQuery </h3>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                            </div>
+                        </div>
+                        <h3> Angular.JS </h3>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                            </div>
+                        </div>
+                        <h3> Bootstrap </h3>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+
+    <!-- Projects -->
+        <section id="projects">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Projects</h2>
+                </div>
+            <!-- Projects filter buttons-->
+                <div class="col-md-12">
+                    <div id="filters" class="text-center">  
+                        <button class="button button-border button-rounded button-primary" data-filter="*">All</button>
+                        <button class="button button-border button-rounded button-primary" data-filter=".angularJS">AngularJS</button>
+                        <button class="button button-border button-rounded button-primary" data-filter=".JS">JavaScript</button>
+                        <button class="button button-border button-rounded button-primary" data-filter=".ror">Ruby on Rails</button>
+                        <button class="button button-border button-rounded button-primary" data-filter=".java">Java</button>
+                        <button class="button button-border button-rounded button-primary" data-filter=".android">Android</button>
+                        <button class="button button-border button-rounded button-primary" data-filter=".python">Python</button>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="container">
+                <div class="isotope">
+                    <div class="row">
+                        <div class="col-md-4 portfolio-item java android">
+                            <img class="img-responsive" src="img/PADS.png" alt="PADS">
+                            <a href="https://play.google.com/store/apps/details?id=appinventor.ai_bon22801.PAD_Srank_CN">  
+                                <img class="img-link" src="img/googleplay.png" alt=""> 
+                            </a>
+                            <h2> <a href="https://play.google.com/store/apps/details?id=appinventor.ai_bon22801.PAD_Srank_CN">PAD S</a>
+                                <i> Android Java </i>
+                            </h2>
+                            <p>PAD S is an android app I wrote for building team in mobile game Puzzle & Dragons. It shows the score requirements for every dungeons and calculate the score based on players' team.</p>
+                        </div>
+
+
+                        <div class="col-md-4 portfolio-item ror">
+                            <img class="img-responsive" src="img/foodweb.png" alt="Foodweb Builder">
+                            <h2> <a href="http://databaseui.herokuapp.com/ ">Foodweb Builder</a> <i> Ruby on Rails </i> </h2>
+                            <p>A species interactions database interface that assists scientists in documenting interaction among species.</p>
+                        </div>
+
+                        <div class="col-md-4 portfolio-item angularJS JS">
+                            <img class="img-responsive" src="img/challenger_icon.png" alt="Leaderboard">
+                            <h2> <a href="Leaderboard/index.html ">Leaderboard</a> <i> AngularJS, JavaScript </i> </h2>
+                            <p>League of Legends leaderboard that using AngularJS HTTP services to parse JSON data from Riot games’ RESTful API</p>
+                        </div>
+
+                        <div class="col-md-4 portfolio-item JS">
+                            <img class="img-responsive" src="img/paint.png" alt="Sketch-Pad">
+                            <h2> <a href="Sketch-Pad/index.html ">Sketch-Pad</a> <i> jQuery, JavaScript </i> </h2>
+                            <p>A web drawing game implemented only using HTML, JavaScript, and jQuery. Players can choose grid size and color and have some fun!</p>
+                        </div>
+
+                        <div class="col-md-4 portfolio-item java">
+                            <img class="img-responsive" src="img/java.png" alt="Image_Scraper">
+                            <h2> <a href="https://github.com/bon22801/Image_Scraper">Image scraper</a> <i> Java </i> </h2>
+                            <p> Image scraper is a script to downloads all images from a input website. I used Jsoup library to parse and manipulate HTML tags. Then I extracted the tags and download it. </p>
+                        </div>
+
+
+                         <div class="col-md-4 portfolio-item python">
+                            <img class="img-responsive" src="img/life.png" alt="Conway's Game of Life">
+                            <h2> <a href="https://github.com/bon22801/Game-of-Life">Conway's Game of Life</a>  <i> Python </i> </h2>
+                            <p>A version of Conway's Game of Life that is implemented using the simple graphics package from Zelle. I additionally implmented reset, go, save, and load function.</p>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+    
+    <!-- contact -->
+        <section id="contact">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <h2 class="section-heading">Contact</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <h4> <a href="mailto:yujer.lin001@umb.edu"><i class="fa fa-envelope-o"></i>
+                            yujer.lin001@umb.edu
+                        </a> </h4>
+                        <form name="sentMessage" id="contactForm" novalidate>
+                            <div class="row">
+                                <div class="col-md-6 col-md-offset-3">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
+                                        <p class="help-block text-danger"></p>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
+                                        <p class="help-block text-danger"></p>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                        <p class="help-block text-danger"></p>
+                                    </div>
+                                    <div class="form-group">
+                                        <textarea class="form-control" rows="6" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                        <p class="help-block text-danger"></p>
+                                    </div>
+                                </div>
+                                <div class="clearsx"></div>
+                                <div class="col-lg-12 text-center">
+                                    <div id="success"></div>
+                                    <button type="submit" class="btn btn-lg btn-primary">Send Message</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+  
+    <!-- Footer -->
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                       <p>© 2015 Yu-Jer Lin</p>
+                    </div>
+            </div>
+                <!-- /.row -->
+        </footer>
+
+
+        <!-- jQuery -->
+        <script src="js/jquery.js"></script>
+
+        <!-- Bootstrap Core JavaScript -->
+        <script src="js/bootstrap.min.js"></script>
+
+        <!-- Contact Form JavaScript -->
+        <script src="js/jqBootstrapValidation.js"></script>
+        <script src="js/scrollSpy.js"></script>
+        <script src="js/contact_me.js"></script>
+        <script src="js/isotope.pkgd.min.js"></script>
+        <script src="js/imagesloaded.pkgd.min.js"></script>
+    </body>
+
+</html>
