--- a/index.html
+++ b/index.html
@@ -147,53 +147,58 @@
                           <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
                           </div>
                         </div>
-                        <h3> Python </h3>
+                        <h3> Ruby </h3>
                         <div class="progress">
-                          <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
+                          <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
                           </div>
                         </div>
-                        <h3> C </h3>
+                        <h3> Python </h3>
                         <div class="progress">
-                          <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%;">
+                          <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
                           </div>
                         </div>
                     </div>
                     <div class="col-md-4 text-center">
                         <h2> Web Development </h2>
+
+                        <h3> JavaScript </h3>
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
+                          </div>
+                        </div>
+                        <h3>  Ruby on Rails </h3>
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
+                          </div>
+                        </div>
                         <h3> CSS </h3>
                         <div class="progress">
                           <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
                           </div>
                         </div>
-                        <h3> JavaScript </h3>
-                        <div class="progress">
-                          <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-                          </div>
-                        </div>
-                        <h3>  Ruby on Rails </h3>
-                        <div class="progress">
-                          <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-                          </div>
-                        </div>
+
                     </div>
                     <div class="col-md-4 text-center">
                         <h2>Libraries</h2>
-                        <h3> jQuery </h3>
+                        <h3> Angular.JS </h3>
                         <div class="progress">
                             <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
                             </div>
                         </div>
-                        <h3> Angular.JS </h3>
+
+                        <h3> jQuery </h3>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">
                             </div>
                         </div>
+
                         <h3> Bootstrap </h3>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+                            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
         </section>
