changed some fonts and updated my resume

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- This is for the social buttons -->
     <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -60,7 +60,6 @@
                             <i class="fa fa-rocket"></i>Projects
                             </a>
                         </li>
-
                         <li>
                             <a href="#contact">
                             <i class="fa fa-envelope"></i>Contact
@@ -94,7 +93,7 @@
                     <div class="introText col-md-8 col-md-offset-2 ">
                         <p class="large"> Hello! My name is Yu-Jer Lin.</p>
                         <p class="large">I'm a software engineer recently completed my computer science Bachelor degree from University of Massachusetts Boston.</p>
-                        <p class="large"> My main focus are web and mobile development. I really love experimenting with new web technologies and frameworks like AngularJS and jQuery. You can see most of my front-end projects under my <a href="#projects">projects section</a>. </p>
+                        <p class="large"> My main focus are web and mobile development. I really love experimenting with new web technologies and frameworks like AngularJS. Chcek out my <a href="#projects">projects</a> and my <a href="resume_Yujer.pdf"> resume</a>! </p>
                     </div>
                 </div>
             </div>
