html: fixed typo

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class="introText col-md-8 col-md-offset-2 ">
                         <p class="large"> Hello! My name is Yu-Jer Lin.</p>
                         <p class="large">I'm a software engineer recently completed my computer science Bachelor degree from University of Massachusetts Boston.</p>
-                        <p class="large"> My main focus are web and mobile development. I really love experimenting with new web technologies and frameworks like AngularJS. Chcek out my <a href="#projects">projects</a> and my <a href="resume_Yujer.pdf"> resume</a>! </p>
+                        <p class="large"> My main focus is web and mobile development. I really love experimenting with new web technologies and frameworks like AngularJS. Chcek out my <a href="#projects">projects</a> and my <a href="resume_Yujer.pdf"> resume</a>! </p>
                     </div>
                 </div>
             </div>
